k8s/manifests-de55d8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-de55d8
  namespace: journee
  labels:
    app: journee-de55d8
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-de55d8
  template:
    metadata:
      labels:
        app: journee-de55d8
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-de55d8
          image: gcr.io/my-docker-471807/journee:de55d8-48bc0c
          ports:
            - containerPort: 3000
