k8s/manifests-de55d8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-de55d8
  namespace: journee
spec:
  selector:
    app: journee-de55d8
  ports:
    - port: 80
      targetPort: 3000
